# juliezen

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/alegra/: admin.py  apps.py  client.py  handlers.py  models.py  urls.py  views.py
apps/alegra/migrations/: 0001_initial.py  0002_add_company_to_credential.py
apps/alegra/services/: __init__.py  erpnext_invoice.py  erpnext_invoice_sync.py  erpnext_sales_invoice.py
apps/alegra/tests/: test_services.py
apps/core/: models.py  urls.py  views.py
apps/erpnext/: admin.py  apps.py  handlers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/erpnext/gateway/: __init__.py  dto.py  exceptions.py  executor.py  mapper.py  normalizer.py  returns.py  service.py  settings.py  utils.py
apps/erpnext/migrations/: 0001_initial.py  0002_add_company_to_credential.py
apps/erpnext/services/: __init__.py  alegra_invoice_sync.py  client.py
apps/integrations/: admin.py  apps.py  error_codes.py  exceptions.py  models.py  router.py  tasks.py  urls.py  utils.py  views.py
apps/integrations/handlers/: __init__.py  alegra.py  listeners.py  registry.py
apps/integrations/migrations/: 0001_initial.py  0002_alter_integrationmessage_uniq_idempotency.py  0003_remove_integrationmessage_unique_constraints.py  0004_fulfillment_models.py  0005_add_return_fields.py
apps/integrations/services/: __init__.py  alegra_client.py
apps/notifications/: urls.py
apps/organizations/: admin.py  middleware.py  models.py  urls.py
apps/organizations/migrations/: 0001_initial.py
apps/recommendations/: urls.py
apps/shopify/: admin.py  apps.py  handlers.py  models.py  services.py  tasks.py  urls.py  views.py
apps/shopify/migrations/: 0001_initial.py
apps/shopify/services/: __init__.py  core.py  erpnext.py
apps/users/: admin.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  local.py  production.py
docker/postgres/: init.sql
documentation/: API_ENDPOINTS.md  ARQUITECTURA_BACKEND.md  GUIA_INTEGRACION_ALEGRA.md  MARKETING_AUTOMATION_ARCHITECTURE.md  MEJORES_PRACTICAS_INTEGRACION_ALEGRA.md  README.md  RENDER_DEPLOYMENT.md  SETUP_STEPS.md  TECHNICAL_IMPLEMENTATION.md  communication_standard.md  datos.md  integrations_and_alegra_review.md  shopify.md
events/: __init__.py  bus.py
events/events/: __init__.py  accounting_events.py  alegra_events.py  base_event.py  data_request_events.py  erpnext_events.py  integration_events.py  shopify_events.py
requirements/: base.txt  local.txt  production.txt  test.txt
scripts/: setup.sh
(+1 files in other folders)
