[tool.poetry]
name = "daydreamshop"
version = "0.1.0"
description = "Backend Django con Event Bus para plataforma de shopping inteligente"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
djangorestframework = "^3.14"
django-cors-headers = "^4.0"
django-filter = "^23.0"
django-extensions = "^3.2"
psycopg2-binary = "^2.9"
django-pgvector = "^0.2"
redis = "^4.5"
django-redis = "^5.3"
celery = "^5.3"
djangorestframework-simplejwt = "^5.2"
openai = "^1.0"
numpy = "^1.24"
scikit-learn = "^1.3"
python-decouple = "^3.8"
dj-database-url = "^2.0"
Pillow = "^10.0"
requests = "^2.31"
structlog = "^23.1"
gunicorn = "^21.2"
whitenoise = "^6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
factory-boy = "^3.3"
coverage = "^7.3"
black = "^23.7"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.5"
django-debug-toolbar = "^4.2"
django-silk = "^5.0"
ipython = "^8.14"
pre-commit = "^3.3"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1"
pytest-mock = "^3.11"
pytest-xdist = "^3.3"

[tool.poetry.group.prod.dependencies]
sentry-sdk = "^1.28"
django-storages = "^1.14"
boto3 = "^1.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["daydreamshop", "apps"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "djangorestframework.*",
    "celery.*",
    "redis.*",
    "openai.*",
    "numpy.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "daydreamshop.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
